--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,14 @@ a {
   text-decoration: none;
 }
 
+a:visited {
+  color: purple;
+}
+
+a:hover {
+  color: blue;
+}
+
 label {
   display: block;
 }
@@ -19,6 +27,7 @@ label {
 nav a {
   display: inline-block;
   margin: 1em;
+  color: black;
 }
 
 form div {
@@ -51,6 +60,126 @@ h1 {
   width: 175px;
 }
 
+#container {
+  position: relative;
+  width: 340px;
+  height: 440px;
+  top: 50%;
+  left: 50%;
+  margin-left: -170px;
+}
+
+form {
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+label {
+  color: #555;
+  display: inline-block;
+  margin-left: 18px;
+  padding-top: 10px;
+  font-size: 14px;
+}
+
+input {
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 12px;
+  outline: none;
+}
+
+input[type='text'],
+input[type='email'],
+input[type='password'] {
+  color: #777;
+  padding-left: 10px;
+  margin: 10px;
+  margin-top: 12px;
+  margin-left: 18px;
+  width: 290px;
+  height: 35px;
+  border: 1px solid #c7d0d2;
+  border-radius: 2px;
+  box-shadow: inset 0 1.5px 3px rgba(190, 190, 190, 0.4), 0 0 0 5px #f5f7f8;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+input[type='text']:hover,
+input[type='email']:hover,
+input[type='password']:hover {
+  border: 1px solid #b6bfc0;
+  box-shadow: inset 0 1.5px 3px rgba(190, 190, 190, 0.7), 0 0 0 5px #f5f7f8;
+}
+
+input[type='text']:focus,
+input[type='email']:focus,
+input[type='password']:focus {
+  border: 1px solid #a8c9e4;
+  box-shadow: inset 0 1.5px 3px rgba(190, 190, 190, 0.4), 0 0 0 5px #e6f2f9;
+}
+
+button {
+  float: right;
+  margin-right: 20px;
+  margin-top: 20px;
+  width: 80px;
+  height: 30px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #acd6ef; /*IE fallback*/
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(#acd6ef),
+    to(#6ec2e8)
+  );
+  background-image: -moz-linear-gradient(
+    top left 90deg,
+    #acd6ef 0%,
+    #6ec2e8 100%
+  );
+  background-image: linear-gradient(top left 90deg, #acd6ef 0%, #6ec2e8 100%);
+  border-radius: 30px;
+  border: 1px solid #66add6;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3),
+    inset 0 1px 0 rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+}
+button:hover {
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(#b6e2ff),
+    to(#6ec2e8)
+  );
+  background-image: -moz-linear-gradient(
+    top left 90deg,
+    #b6e2ff 0%,
+    #6ec2e8 100%
+  );
+  background-image: linear-gradient(top left 90deg, #b6e2ff 0%, #6ec2e8 100%);
+}
+button:active {
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(#6ec2e8),
+    to(#b6e2ff)
+  );
+  background-image: -moz-linear-gradient(
+    top left 90deg,
+    #6ec2e8 0%,
+    #b6e2ff 100%
+  );
+  background-image: linear-gradient(top left 90deg, #6ec2e8 0%, #b6e2ff 100%);
+}
+
 #shoe-layout {
   display: flex;
   flex-wrap: wrap;
@@ -58,4 +187,20 @@ h1 {
 
 #navbar {
   text-align: center;
+}
+
+#customBtn a {
+  float: right;
+  text-align: center;
+  margin-right: 85px;
+  width: 140px;
+  height: 20px;
+  font-size: 14px;
+  font-weight: bold;
+  color: black;
+  cursor: pointer;
+}
+
+#customBtn a:hover {
+  color: blue;
 }
