--- a/public/style.css
+++ b/public/style.css
@@ -133,38 +133,38 @@ input[type='password']:focus {
   box-shadow: inset 0 1.5px 3px rgba(190, 190, 190, 0.4), 0 0 0 5px #e6f2f9;
 }
 
-button {
+/* button {
   float: right;
   margin-right: 20px;
   margin-top: 20px;
-  /* width: 80px;
-  height: 30px; */
+  width: 80px;
+  height: 30px;
   font-size: 14px;
   font-weight: bold;
   color: #fff;
   background-color: #acd6ef;
-  /*IE fallback*/
-  /* background-image: -webkit-gradient(
+  IE fallback
+  background-image: -webkit-gradient(
     linear,
     left top,
     left bottom,
     from(#acd6ef),
     to(#6ec2e8)
-  ); */
-  /* background-image: -moz-linear-gradient(
+  );
+  background-image: -moz-linear-gradient(
     top left 90deg,
     #acd6ef 0%,
     #6ec2e8 100%
-  ); */
-  /* background-image: linear-gradient(top left 90deg, #acd6ef 0%, #6ec2e8 100%); */
+  );
+  background-image: linear-gradient(top left 90deg, #acd6ef 0%, #6ec2e8 100%);
   border-radius: 30px;
-  /* border: 1px solid #66add6; */
+  border: 1px solid #66add6;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3),
     inset 0 1px 0 rgba(255, 255, 255, 0.5);
   cursor: pointer;
-}
+} */
 
-button:hover {
+/* button:hover {
   background-image: -webkit-gradient(
     linear,
     left top,
@@ -194,7 +194,7 @@ button:active {
     #b6e2ff 100%
   );
   background-image: linear-gradient(top left 90deg, #6ec2e8 0%, #b6e2ff 100%);
-}
+} */
 
 #shoe-layout {
   display: flex;
